<resources>
    <string name="app_name">TrabajoAndroid</string>
    <string name="nombre_restaurant">Ultra restaurant</string>
    <string name="menu">Menu</string>
    <string name="accederMenu">Acceder a la carta</string>
    <string name="accederMenuReal">Acceder al menu</string>
    <string name="Precio">Precio:</string>
    <string name="Cerrar_sesion">Cerrar sesión</string>
    <string name="FuncionLista1">Carta version 1</string>
    <string name="FuncionLista2">Carta version 2</string>
    <string name="FuncionLista3">Carta version 3</string>
    <string name="FuncionLista4">Carta version 4</string>
    <string name="FuncionLista5">Carta version 5</string>
    <string name="FuncionLista6">Carta version 6</string>
    <string name="FuncionWeb">Google</string>
    <string name="FuncionCarta">Carta</string>
    <string name="sesion">sesion.txt</string>
    <string name="Descrip_scones">Los scones son unos panecillos típicos de la cocina inglesa, que se suelen servir con té, crema batida y mermelada. Tienen una textura suave y esponjosa, y se pueden preparar con diferentes ingredientes, como arándanos, queso, pasas o frutos secos.</string>
    <string name="Descrip_superScones"> Los scones son unos bocadillos dulces o salados que se originaron en Escocia y que se popularizaron en el Reino Unido y otros países. Se elaboran con una masa de harina, mantequilla, azúcar y leche, a la que se le puede añadir frutas, queso o especias.</string>
    <string name="Descrip_carneCruda">La carne cruda es la carne que no ha sido cocinada ni sometida a ningún proceso de conservación. Se puede consumir de diferentes formas, como el tartar, el carpaccio, el ceviche o el sushi. Sin embargo, comer carne cruda puede tener riesgos para la salud, ya que puede contener bacterias, parásitos, virus o toxinas que pueden provocar enfermedades como la salmonelosis, la triquinosis, la toxoplasmosis o la listeriosis</string>
    <string name="Descrip_Bistek">La carne cruda es la carne que no ha sido cocinada ni sometida a ningún proceso de conservación. Se puede consumir de diferentes formas, como el tartar, el carpaccio, el ceviche o el sushi. Sin embargo, comer carne cruda puede tener riesgos para la salud, ya que puede contener bacterias, parásitos, virus o toxinas que pueden provocar enfermedades como la salmonelosis, la triquinosis, la toxoplasmosis o la listeriosis</string>
    <string name="Descrip_coccaCola">La Coca-Cola es una bebida gaseosa de color marrón oscuro, que tiene un sabor dulce y refrescante. Se elabora con un concentrado de extractos de plantas, como la hoja de coca y la nuez de cola, y se endulza con azúcar o edulcorantes artificiales.</string>
    <string name="Descrip_supDesay">El desayuno con huevos con verduras es una opción saludable y equilibrada para empezar el día con energía y nutrientes. Los huevos son una fuente de proteínas de alta calidad, que ayudan a mantener la masa muscular y a regular el apetito. Las verduras aportan vitaminas, minerales, antioxidantes y fibra, que favorecen el funcionamiento del sistema inmunitario, el tránsito intestinal y la prevención de enfermedades.</string>
    <string name="Descrip_desaCompl">Un desayuno completo pero solo carne no es una opción muy saludable, ya que la carne es una fuente de proteínas, pero también de grasas saturadas, colesterol y sodio, que pueden aumentar el riesgo de enfermedades cardiovasculares, obesidad, diabetes o cáncer12. Además, al consumir solo carne, se estaría dejando de lado otros nutrientes esenciales que aport</string>
    <string name="Descrip_ojoDeDios">Un desayuno de beicon y huevos es una receta tradicional de la cocina anglosajona, que se suele servir con pan tostado, mantequilla y mermelada. El beicon se fríe en una sartén hasta que quede crujiente, y los huevos se pueden hacer revueltos, fritos o escalfados, según el gusto de cada uno. El desayuno de beicon y huevos es una fuente de proteínas y energía, pero también de grasas y calorías, por lo que se recomienda consumirlo con moderación y acompañarlo de fruta o zumo natural</string>
    <string name="Descrip_boCar">Las bolas de carne sazonado son unas croquetas de carne picada de ternera, mezclada con especias como el pimentón, el comino, la canela y la nuez moscada, y rebozadas con una masa de harina, agua y levadura. Se fríen en aceite caliente hasta que quedan crujientes por fuera y jugosas por dentro, y se sirven con salsa de tomate.</string>
    <string name="Descrip_algoAzu">El algodón de azúcar es una golosina que se forma por hilos de azúcar derretido que se enrollan alrededor de un palo o un cono. Tiene una textura suave y esponjosa, y se disuelve en la boca al contacto con la saliva. El algodón de azúcar suele tener un color rosa, pero también puede ser de otros colores, según el colorante que se le añada. Se elabora con una máquina especial que calienta el azúcar y lo hace girar a gran velocidad, creando los finos hilos que se recogen con un palo</string>
    <string name="Descrip_beQue">El beicon es un producto cárnico que se obtiene de la panceta del cerdo, que es la parte ventral del animal. El beicon se somete a un proceso de salazón y ahumado, que le da un sabor intenso y un aroma característico. El beicon se puede consumir de diferentes formas, como frito, asado, horneado o crudo. Es un ingrediente muy utilizado en la cocina anglosajona, especialmente en el desayuno, donde se acompaña con huevos, pan y mermelada</string>
    <string name="Descrip_buñuelos">El beicon es un producto cárnico que se obtiene de la panceta del cerdo, que es la parte ventral del animal. El beicon se somete a un proceso de salazón y ahumado, que le da un sabor intenso y un aroma característico. El beicon se puede consumir de diferentes formas, como frito, asado, horneado o crudo. Es un ingrediente muy utilizado en la cocina anglosajona, especialmente en el desayuno, donde se acompaña con huevos, pan y mermelada</string>
    <string name="Descrip_polPoHec">El pollo al horno es una receta que consiste en cocinar un pollo entero o en trozos en el horno, con aceite, sal, pimienta y otras especias o hierbas aromáticas. El pollo al horno se suele acompañar de una guarnición de patatas, cebollas, zanahorias u otras verduras, que se asan junto al pollo y se impregnan de su jugo. El pollo al horno es un plato fácil de preparar, económico y nutritivo, que se puede adaptar al gusto de cada uno.</string>
    <string name="Descrip_polFri">El pollo frito es una forma de cocinar el pollo que consiste en sumergirlo en aceite caliente después de haberlo rebozado con harina, pan rallado y especias. El pollo frito tiene una capa exterior crujiente y un interior tierno y jugoso. Es un plato muy popular en la gastronomía de muchos países, especialmente en Estados Unidos, donde se suele servir con salsa de barbacoa, puré de patatas o ensalada de col.</string>
    <string name="Descrip_tarQue">La tarta de queso, con su textura suave y cremosa, es un deleite para los sentidos. Su aroma reconfortante y su sabor delicadamente dulce hacen que cada bocado sea una experiencia encantadora. Esta delicia gastronómica, con su base crujiente y su relleno sedoso, es un placer indulgente que cautiva a quienes tienen el placer de probarla.</string>
    <string name="Descrip_helado">El helado de una bola, con su suavidad cremosa y su sabor refrescante, es un placer simple pero sublime. Una sola bola de este helado es suficiente para transportar tus sentidos a un estado de pura felicidad. Su textura suave y fresca se derrite delicadamente en tu boca, mientras que su sabor, ya sea vainilla clásica, chocolate indulgente o algún otro sabor tentador, te brinda una experiencia que te deja con ganas de más.</string>
    <string name="Descrip_helado3">El helado de tres bolas es una experiencia indulgente que despierta los sentidos y hace que cada momento sea aún más especial. Con una selección de sabores tentadores que se combinan armoniosamente, cada bola ofrece una explosión de delicioso sabor. </string>
    <string name="Descrip_helado4">El helado de cuatro bolas es una verdadera fiesta para los sentidos, una experiencia indulgente que te lleva a un viaje de sabores exquisitos. Con una variedad de opciones para explorar, cada bola ofrece una explosión única de delicioso sabor que te deja deseando más.</string>
    <string name="Scones">Scones</string>
    <string name="SuperScones">Super scones</string>
    <string name="CarneCruda">Carne cruda</string>
    <string name="Bistek">Bistek</string>
    <string name="CocaCola">Coca cola</string>
    <string name="SupDes">Super desayuno</string>
    <string name="DesaCom">Desayuno completo</string>
    <string name="OjoDedios">Ojo de dios</string>
    <string name="BolasCarne">Bolas de carne sazonada</string>
    <string name="AlgodonDeAzucar">Algodón de azucar</string>
    <string name="BeiQue">Beicon quemado</string>
    <string name="Buñuelos">Buñuelos</string>
    <string name="PolloPohe">Pollo poco hecho</string>
    <string name="PolloFrito">Pollo frito</string>
    <string name="TartaQueso">Tarta de queso</string>
    <string name="Helado">Helado triple</string>
    <string name="HeladoTri">Helado tres bolones</string>
    <string name="HeladoCu">Helado cuatro bolones</string>
    <string name="Intent_Comida">comida</string>
    <string name="Volver">volver</string>
    <string name="ContCarne">Añadir platos de carne</string>
    <string name="ContVerdura">Añadir platos con verduras</string>
    <string name="ContDesayuno">Añadir desayuno</string>
    <string name="TieneBebida">Añadir bebidas</string>
    <string name="ContienePostre">Añadir postres</string>
    <string name="TogleOf">Solo verdura</string>
    <string name="TogleOn">Solo carne</string>
    <string name="cualquierTipo">Cualquier precio</string>
    <string name="masDe20">Mas de 20€</string>
    <string name="MenosDe20">Menos de 20€</string>
    <string name="fecha_favorita">Seleccione tu fecha favorita</string>
    <string name="es_mayor_18">¿Es mayor de 18 años?</string>
    <string name="buscador">Buscador...</string>
    <string name="solo_carne">Solo carne</string>
    <string name="button">Inicar sesión</string>
    <string name="todo">Todo</string>
    <string name="carne">Carne</string>
    <string name="postre">Postre</string>
    <string name="verdura">Verdura</string>
    <string name="registrarse">Registrarse</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="porque_nos_escogerias">¿Porque nos escogerias?</string>
    <string name="nuestraApp">Nuestra app de comida se destaca por una experiencia única y conveniente que no encontrarás en otras plataformas. Con una interfaz intuitiva y una amplia selección de restaurantes locales de alta calidad, ofrecemos la combinación perfecta entre variedad y facilidad. Además, nuestro sistema de entrega rápida y eficiente garantiza que tu comida llegue caliente y fresca a tu puerta en tiempo récord. ¡Descarga nuestra app hoy mismo y descubre por qué somos la mejor opción para satisfacer tus antojos gastronómicos!</string>
    <string name="que_productos_tenemos">¿Que productos tenemos?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="volver_al_menu">Volver al menu</string>
    <string name="informaci_n">Información</string>
    <string name="video_Scones">https://media.istockphoto.com/id/1318392281/es/v%C3%ADdeo/scone-integral-en-la-bandeja-para-hornear-listo-para-hornear.mp4?s=mp4-640x640-is&amp;k=20&amp;c=GPTlBSEUgbgplNhoVvFnzGx8BY-G8Wtlxdqr03MufqQ=</string>
    <string name="video_SuperScones">https://media.istockphoto.com/id/976242398/es/v%C3%ADdeo/bollos-con-t%C3%A9-de-la-tarde.mp4?s=mp4-640x640-is&amp;k=20&amp;c=jDVJYfl6flpuNdka0D0VaJVa45T6YdIb8qf-52Ulyls=</string>
</resources>